# ConsumerHealth

./: .env.example  .gitignore  LICENSE  README.md
.github/workflows/: deploy.yml  ingest-backfill.yml  ingest-daily.yml  ingest-monthly.yml  ingest-quarterly.yml  ingest-weekly.yml
Inbox/: README.md
apps/web/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
apps/web/public/: robots.txt
apps/web/src/components/: DataVsNarrative.astro  HeadlineScore.astro  HomeIndicators.astro  IndicatorChart.astro  QuoteCard.astro  SparkLine.tsx  SubScoreCard.astro
apps/web/src/layouts/: BaseLayout.astro
apps/web/src/lib/: db.ts  echarts.ts  scoring.ts
apps/web/src/pages/: 404.astro  earnings-quotes.astro  index.astro  methodology.astro
apps/web/src/pages/indicators/: [slug].astro  index.astro
apps/web/src/pages/quotes/: index.astro
apps/web/src/pages/subscores/: [slug].astro
apps/web/src/styles/: global.css
docs/: methodology-overhaul.md
ingestion/: pyproject.toml  schema.sql
ingestion/ingestion/: config.py  db.py  seed_indicators.py
ingestion/ingestion/ai/: monthly_summary.py  narrative_diff.py  quote_classifier.py
ingestion/ingestion/jobs/: backfill.py  daily.py  monthly.py  quarterly.py  weekly.py
ingestion/ingestion/sources/: bea.py  bls.py  conf_board.py  eia.py  fred.py  indeed.py  manheim.py  nyfed_hhdc.py  nyfed_sce.py  sec_edgar.py  tsa.py
ingestion/ingestion/transforms/: percentile.py  scoring.py  validate.py
ingestion/tests/: conftest.py  test_percentile.py  test_scoring.py
