[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consumer-compass-ingestion"
version = "0.1.0"
description = "Data ingestion pipeline for The Consumer Compass"
requires-python = ">=3.11"
dependencies = [
    # HTTP
    "httpx>=0.28.1",
    "requests>=2.31.0",

    # Data
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # Database (Turso / libSQL — async-native)
    "libsql-client>=0.3.1",

    # Validation & config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # Resilience
    "tenacity>=8.2.0",

    # Logging
    "structlog>=24.0.0",

    # Date utilities
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",

    # AI (Phase 3 quote classifier)
    "anthropic>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
ingest-daily     = "ingestion.jobs.daily:main"
ingest-weekly    = "ingestion.jobs.weekly:main"
ingest-monthly   = "ingestion.jobs.monthly:main"
ingest-quarterly = "ingestion.jobs.quarterly:main"
ingest-backfill  = "ingestion.jobs.backfill:main"

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
